# aruco-distance

./: CMakeLists.txt  package.xml
include/: aruco.h
launch/: aruco_scan.launch
src/: aruco.cpp  main.cpp
yaml/: fishcam.yaml
